fix stats links, also tooltip headers and truncate

--- a/media/css/impala/stats.less
+++ b/media/css/impala/stats.less
@@ -211,6 +211,8 @@ table tbody tr {
     }
     thead th {
         white-space: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     th, td {
         width: 100px;
